--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@
 }
 .form-control .password {
   margin-top: 3.5px;
-  margin-left: -16px;
+  width: 90%;
   font-size: 1.45rem;
   border: none;
   outline: none;
